--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sit on chair</title>
     <link rel="stylesheet" href="./css/main.css">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+        integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,31 +31,49 @@
                 </ul>
             </nav>
         </div>
-    </header> <!-- nagłówek strony, czarny pasek z logo i menu -->
-    <section>
-        <div class="container">
+    </header>
+    <main>
+        <section class="carousel">
+            <div class="container banner">
+                <div class="left-arrow arrow">
+                    <i class="fas fa-chevron-left green"></i>
+                </div>
+                <div class="img-wrap">
+                    <img src="images/black_chair.png">
+                </div>
+                <div class="cta-wrap">
+                    <h2>SIT <span>ON</span> OUR <span>CHAIR</span></h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <a href="#" class="more btn">ZOBACZ WIĘCEJ</a>
+                </div>
+                <div class="right-arrow arrow">
+                    <i class="fas fa-chevron-right green"></i>
+                </div>
+            </div>
+        </section> <!-- sekcja z fotelem i opisem -->
+        <section>
+            <div class="container">
 
-        </div>
-    </section> <!-- sekcja z fotelem i opisem -->
-    <section>
-        <div class="container">
+            </div>
+        </section> <!-- sekcja ze zdjęciami foteli -->
+        <section>
+            <div class="container">
 
-        </div>
-    </section> <!-- sekcja ze zdjęciami foteli -->
-    <section>
-        <div class="container">
+            </div>
+        </section> <!-- sekcja z cennikiem -->
+        <section>
+            <div class="container">
 
-        </div>
-    </section> <!-- sekcja z cennikiem -->
-    <section>
-        <div class="container">
-
-        </div>
-    </section> <!-- sekcja z formularzem -->
+            </div>
+        </section> <!-- sekcja z formularzem -->
+    </main>
     <footer>
         <div class="container">
 
         </div>
+
     </footer>
     <!-- stopka strony, ponieważ ma takie samo tło jak sekcja wyżej, nie odcina się od niej w widoczny
     sposób, stanowi jednak odrębną część strony -->
