Carousel fix. Product boxes section finished

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
     </header>
     <main>
+        <!-- sekcja z fotelem i opisem -->
         <section class="carousel">
             <div class="container banner">
                 <div class="left-arrow arrow">
@@ -43,7 +44,8 @@
                 </div>
                 <div class="cta-wrap">
                     <h2>SIT <span>ON</span> OUR <span>CHAIR</span></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    <p id="cta-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <a href="#" class="more btn">ZOBACZ WIĘCEJ</a>
@@ -52,22 +54,45 @@
                     <i class="fas fa-chevron-right green"></i>
                 </div>
             </div>
-        </section> <!-- sekcja z fotelem i opisem -->
+        </section>
+        <!-- sekcja ze zdjęciami foteli -->
+        <section class="products">
+            <div class="container presentation">
+                <div class="photobox-wrap">
+                    <img src="./images/box1_img.jpg">
+                    <div class="name-of-chair">
+                        <p>Chair CLAIRE</p>
+                    </div>
+                </div>
+                <div class="photobox-wrap">
+                    <img src="./images/box2_img.jpg">
+                    <div class="name-of-chair">
+                        <p>Chair MARGARITA</p>
+                    </div>
+                </div>
+                <div class="photobox-wrap product-box">
+                    <p class="product-box-title">Finds all inputs</p>
+                    <p class="product-box-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi atque
+                        consectetur
+                        dolor error,
+                        est et excepturi expedita fugit labore nemo odio.neque praesentium quis sunt, tempora, ut vel
+                        veniam voluptatum. Illum, libero.</p>
+                    <p class="product-box-text">Officia placeat possimus reiciendis rerum.</p>
+                </div>
+            </div>
+        </section>
+        <!-- sekcja z cennikiem -->
+        <section class="pricelist">
+            <div class="container">
+
+            </div>
+        </section>
+        <!-- sekcja z formularzem -->
         <section>
             <div class="container">
 
             </div>
-        </section> <!-- sekcja ze zdjęciami foteli -->
-        <section>
-            <div class="container">
-
-            </div>
-        </section> <!-- sekcja z cennikiem -->
-        <section>
-            <div class="container">
-
-            </div>
-        </section> <!-- sekcja z formularzem -->
+        </section>
     </main>
     <footer>
         <div class="container">
