One div was hidden in products section in the version for smaller devices. Heading and bg-color were added to pricelist section.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
         <!-- sekcja z cennikiem -->
         <section class="pricelist">
             <div class="container">
-
+                <h2>CENNIK</h2>
+                <div class="pricing light"></div>
+                <div class="pricing accent-color"></div>
+                <div class="pricing light"></div>
             </div>
         </section>
         <!-- sekcja z formularzem -->
